--- a/libGatewayClient/libGatewayClient.cbp
+++ b/libGatewayClient/libGatewayClient.cbp
@@ -36,15 +36,19 @@
 				</Linker>
 			</Target>
 		</Build>
-		<Unit filename="GatewayAPI.cpp" />
+		<Unit filename="GatewayClient.cpp" />
 		<Unit filename="JsonBuffer.cpp" />
-		<Unit filename="include/GatewayAPI.h" />
+		<Unit filename="gway_api.cpp" />
+		<Unit filename="gway_errors.cpp" />
+		<Unit filename="include/GatewayClient.h" />
 		<Unit filename="include/JsonBuffer.h" />
-		<Unit filename="include/libGateway_C_API.h" />
+		<Unit filename="include/gway_api.h" />
+		<Unit filename="include/gway_errors.h">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
 		<Unit filename="json/json-forwards.h" />
 		<Unit filename="json/json.h" />
 		<Unit filename="jsoncpp.cpp" />
-		<Unit filename="libGateway_C_API.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
